2006-07-16  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/encodings.c:
   Reordered encodings in the file menu, divided into subregions.
 * geany.glade, src/interface.c: Added missing mnemonics to file menu.
 * src/document.c: Added filename to an error message.
 * src/encodings.c: Removed function encodings_get_encodings().
 * src/utils.c: Simplified locale detection and little speed up.
 * src/main.c, src/document.c, src/geany.h:
   Removed code for alternative scrolling(it was not better).
 * src/sci_cb.c, src/callbacks.c, src/utils.c, src/highlighting.c,
   src/main.c, data/html_entities.tags, Makefile.am:
   Moved HTML entities from sci_cb.h to data/html_entities.tags.


2006-07-16  Nick Treleaven  <nick.treleaven@btinternet.com>

 * doc/scikeybinding.docbook, doc/geany.docbook:
   Added Scintilla keyboard commands appendix taken from the SciTE
   documentation section 'Keyboard Commands'.


2006-07-15  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/keybindings.c, src/sci_cb.c:
   Show auto completion list immediately when called by a keybinding.
 * geany.glade, src/interface.c, src/prefs.c, src/geany.h,
   src/keyfile.c, src/utils.c:
   Toolbar items for file operations can also be hidden.


2006-07-15  Nick Treleaven  <nick.treleaven@btinternet.com>

 * keybindings.c, keybindings.h: Add keybinding for Find in files.
 * doc/geany.docbook: Updated Make command names and keybindings.
 * src/vte.c: Fix applying vte settings on startup and prevent the
              message window vertical scrollbar being hidden.


2006-07-14  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/search.c: Give accurate message on finishing finding in files.
 * src/callbacks.c: Use locale encoding for Find in files and
                    remember previous searches.


2006-07-14  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/filetypes.c, src/highlighting.c, tagmanager/tm_tag.c,
   tagmanager/tm_workspace.c: Fixed autocompletion for filetype C++.