@@ -1216,60 +1216,6 @@ gboolean utils_is_absolute_path(const gchar *path)
 }
 
 
-void utils_ensure_final_newline(gint idx)
-{
-	gint max_lines = sci_get_line_count(doc_list[idx].sci);
-	gboolean append_newline = (max_lines == 1);
-	gint end_document = sci_get_position_from_line(doc_list[idx].sci, max_lines);
-
-	if (max_lines > 1)
-	{
-		append_newline = end_document > sci_get_position_from_line(doc_list[idx].sci, max_lines - 1);
-	}
-	if (append_newline)
-	{
-		const gchar *eol = "\n";
-		switch (sci_get_eol_mode(doc_list[idx].sci))
-		{
-			case SC_EOL_CRLF:
-				eol = "\r\n";
-				break;
-			case SC_EOL_CR:
-				eol = "\r";
-				break;
-		}
-		sci_insert_text(doc_list[idx].sci, end_document, eol);
-	}
-}
-
-
-void utils_strip_trailing_spaces(gint idx)
-{
-	gint max_lines = sci_get_line_count(doc_list[idx].sci);
-	gint line;
-
-	for (line = 0; line < max_lines; line++)
-	{
-		gint line_start = sci_get_position_from_line(doc_list[idx].sci, line);
-		gint line_end = sci_get_line_end_from_position(doc_list[idx].sci, line);
-		gint i = line_end - 1;
-		gchar ch = sci_get_char_at(doc_list[idx].sci, i);
-
-		while ((i >= line_start) && ((ch == ' ') || (ch == '\t')))
-		{
-			i--;
-			ch = sci_get_char_at(doc_list[idx].sci, i);
-		}
-		if (i < (line_end-1))
-		{
-			sci_target_start(doc_list[idx].sci, i + 1);
-			sci_target_end(doc_list[idx].sci, line_end);
-			sci_target_replace(doc_list[idx].sci, "");
-		}
-	}
-}
-
-
 gdouble utils_scale_round (gdouble val, gdouble factor)
 {
 	//val = floor(val * factor + 0.5);
@@ -1517,60 +1463,6 @@ gchar utils_brace_opposite(gchar ch)
 		case '>': return '<';
 		default: return '\0';
 	}
-}
-
-
-/// TODO move me to document.c
-void utils_replace_tabs(gint idx)
-{
-	gint i, len, j = 0, tabs_amount = 0;
-	gint tab_w = sci_get_tab_width(doc_list[idx].sci);
-	gchar *data, *replacement;
-	gchar *text;
-
-	replacement = g_malloc(tab_w + 1);
-
-	// get the text
-	len = sci_get_length(doc_list[idx].sci) + 1;
-	data = g_malloc(len);
-	sci_get_text(doc_list[idx].sci, len, data);
-
-	// prepare the spaces with the width of a tab
-	for (i = 0; i < tab_w; i++) replacement[i] = ' ';
-	replacement[tab_w] = '\0';
-
-	for (i = 0; i < len; i++) if (data[i] == 9) tabs_amount++;
-
-	// if there are no tabs, just return and leave the content untouched
-	if (tabs_amount == 0)
-	{
-		g_free(data);
-		g_free(replacement);
-		return;
-	}
-
-	text = g_malloc(len + (tabs_amount * (tab_w - 1)));
-
-	for (i = 0; i < len; i++)
-	{
-		if (data[i] == 9)
-		{
-			text[j++] = 32;
-			text[j++] = 32;
-			text[j++] = 32;
-			text[j++] = 32;
-		}
-		else
-		{
-			text[j++] = data[i];
-		}
-	}
-	geany_debug("tabs_amount: %d, len: %d, %d == %d", tabs_amount, len, len + (tabs_amount * (tab_w - 1)), j);
-	sci_set_text(doc_list[idx].sci, text);
-
-	g_free(data);
-	g_free(text);
-	g_free(replacement);
 }
 
 
